--- a/EPAM_1/EPAM_1/EPAM1.csproj
+++ b/EPAM_1/EPAM_1/EPAM1.csproj
@@ -6,11 +6,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B39D471D-8F3C-465B-9FEA-731AAB3EDFDC}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>EPAM_1</RootNamespace>
-    <AssemblyName>EPAM_1</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <RootNamespace>EPAM1</RootNamespace>
+    <AssemblyName>EPAM1</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
