--- a/EPAM_1/EPAM_1/EPAM1.csproj
+++ b/EPAM_1/EPAM_1/EPAM1.csproj
@@ -44,20 +44,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cargos\Baggage.cs" />
-    <Compile Include="Cargos\Interfaces\IBasicCargo.cs" />
     <Compile Include="Cargos\Passenger.cs" />
     <Compile Include="Locomotives\DiselLocomotive.cs" />
     <Compile Include="Locomotives\ElectricLocomotive.cs" />
     <Compile Include="Locomotives\Interfaces\ILocomotive.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Trains\Interfaces\ITrain.cs" />
+    <Compile Include="Trains\GoodsTrain.cs" />
+    <Compile Include="Trains\Train.cs" />
     <Compile Include="Trains\PassengerTrain.cs" />
     <Compile Include="Wagons\CouchetteWagon.cs" />
     <Compile Include="Wagons\CoupeWagon.cs" />
     <Compile Include="Wagons\CoveredWagon.cs" />
-    <Compile Include="Wagons\Interfaces\IGoodsWagon.cs" />
-    <Compile Include="Wagons\Interfaces\IPassengerWagon.cs" />
+    <Compile Include="Wagons\GoodsWagon.cs" />
     <Compile Include="Wagons\PassengerWagon.cs" />
     <Compile Include="Wagons\Interfaces\IWagon.cs" />
     <Compile Include="Wagons\TankWagon.cs" />
@@ -65,6 +64,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Trains\Interfaces\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
