Add Subject Heading and more tests

--- a/EPAM_2/ConcordanceDictionary/App.config
+++ b/EPAM_2/ConcordanceDictionary/App.config
@@ -6,6 +6,7 @@
   <appSettings>
     <add key="ReadPath" value="..\..\..\TextFile\InputFile.txt" />
     <add key="OutputPath" value="..\..\..\TextFile\OutputFile.txt" />
+    <add key="SerializePath" value="..\..\..\TextFile\SerializeFile.txt" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
