--- a/EPAM_4/Accountant/Accountant.DAL/Accountant.DAL.csproj
+++ b/EPAM_4/Accountant/Accountant.DAL/Accountant.DAL.csproj
@@ -51,11 +51,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EF\ReportContext.cs" />
-    <Compile Include="Entities\Client.cs" />
-    <Compile Include="Entities\Product.cs" />
+    <Compile Include="Entities\Manager.cs" />
     <Compile Include="Entities\Report.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
