--- a/EPAM_4/Accountant/Accountant.DAL/App.config
+++ b/EPAM_4/Accountant/Accountant.DAL/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DBConnection" connectionString="Server=localhost\SQLEXPRESS01;Database=master;Trusted_Connection=True;"
+    <add name="DBConnection" connectionString="Server=localhost\SQLEXPRESS;Trusted_Connection=True;"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <startup>
