--- a/EPAM_4/Accountant/Acountant.BLL/Acountant.BLL.csproj
+++ b/EPAM_4/Accountant/Acountant.BLL/Acountant.BLL.csproj
@@ -2,11 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <StartupObject></StartupObject>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
-    <PackageReference Include="CsvHelper" Version="12.0.1" />
+    <PackageReference Include="CsvHelper" Version="12.0.0" />
+    <PackageReference Include="EntityFramework" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
